# FacultyOfEngineeringMaterial

InterViewQuestions&IEEEJourney/: interviewQuestions.txt
InterViewQuestions&IEEEJourney/IEEE Head/: IT-Mobile Members Sheet.xlsx  InterviewTime.xlsx  aboutIEEE.txt  members_github_accounts.txt  mohammed.txt
InterViewQuestions&IEEEJourney/IEEE Head/1stPartReport/: IT Mobile Application - 1st half.docx
InterViewQuestions&IEEEJourney/IEEE Head/Interview  questions/: MyInterViewQuestions.md  ShreifQuestions.docx  flutterTechnicalQ&A.md
InterViewQuestions&IEEEJourney/IEEE Head/Sessions/SessionOne/: linkForFirstApp.txt
InterViewQuestions&IEEEJourney/IEEE Head/VisionAndMission/: missionAndVision.md
InterViewQuestions&IEEEJourney/IEEE Head/meetings/: gatheringMeetingNotes.md
ThirdYear/FirstTerm/Communication/assignments/ass2/: AbdelazizSalahMohammed_Assignment2.docx
ThirdYear/FirstTerm/Communication/assignments/ass3/: Ass#3Comm.docx  LastEdit.docx
ThirdYear/FirstTerm/Communication/labs/: Lab1.m  trial.m
ThirdYear/FirstTerm/ComputerArchitecture/project/: CodeImplementation.cr.mti  CodeImplementation.mpf  CodeImplementation.mpf_new  Pipelined_Processor.drawio  Team #18.docx
ThirdYear/FirstTerm/ImageProcessing/project/: Khaled.docx  No33.docx  [IP] Project F2022.docx  [IP] [Project] Notes about the proposal - From last year [Updated].docx  projectProposalIdeas.md
ThirdYear/FirstTerm/VLSI/pdfsPermissionChanger/: readme.txt
ThirdYear/FirstTerm/VLSI/project/: transcript
ThirdYear/FirstTerm/marketing/project/: google BCG.docx
ThirdYear/SecondTerm/ControlEngineering/assignment/: block.m
ThirdYear/SecondTerm/Embedded_Systems/Assignments/: EmbeddedSystemAssignments.txt  WhenEveryAlgorithmIsUseful.md
ThirdYear/SecondTerm/Graphics/labs/lab2/: CMakeLists.txt  main.cpp  notes.md  simple.frag  simple.vert
ThirdYear/SecondTerm/Nural_Networks/project/: projectNotes.ipynb
(+321 files in other folders)
