cmake_minimum_required(VERSION 3.0.0) # this indicates the minimum version for cmake 
project(lab2 VERSION 0.1.0) # this specify the name of the project and the version

add_executable(lab2 main.cpp) # here we add the executable file with the project name. w 34an n3ml run lel exe (lab2) lazm n3ml compile le main.cpp


